--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-
-FOR IMPLEMENTATION I USED LAB4- PCOM
+# Router Dataplane
 --------------------------------------------------------------------------------------------------------------
 
 This code implements a simple IPv4 router using a Trie data structure for fast routing table lookups. 
